# webserv

./: .gitignore  .gitmodules  CMakeLists.txt  Connection.cpp  Connection.hpp  ExecuteHeaders.cpp  ExecuteHeaders.hpp  Location.cpp  Location.hpp  Makefile  ParseRequest.cpp  ParseRequest.hpp  ProcessRequest.cpp  ProcessRequest.hpp  README.md  RequestHandler.cpp  RequestHandler.hpp  Server.cpp  Server.hpp  Servermanager.cpp  Servermanager.hpp  default.conf  main.cpp  nginx.conf  parser.cpp  split.cpp  webserv.hpp
.github/workflows/: macos_compile.yml  ubuntu_compile  ubuntu_compile.yml  ubuntu_compile.ymlw
cgi-bin/: post.bla  printenv.bla  printenv.pl  redirect.pl
configfiles/: .htpasswd  42test.conf  default.conf  nginx.conf  realnginx.conf  seoul.conf
getnextline/: 42  Makefile  get_next_line.cpp  get_next_line.hpp  main.cpp
htmlfiles/: 403.html  404.html  405.html  error.html  get_post.html  index.html  other.html  post.html
htmlfiles/css/: stylesheet.css
htmlfiles/nginx-error-pages/: 400.html  401.html  402.html  403.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  415.html  416.html  417.html  418.html  421.html  422.html  423.html  424.html  425.html  426.html  428.html  429.html  431.html  451.html  500.html  501.html  502.html  503.html  504.html  505.html  506.html  507.html  508.html  510.html  511.html  (+1 more)
includes/: Base64.hpp  Cgi.hpp  Client.hpp  Colours.hpp  Connection.hpp  Enums.hpp  Location.hpp  Process.hpp  RequestHandler.hpp  RequestParser.hpp  ResponseHandler.hpp  Server.hpp  Servermanager.hpp  libftGnl.hpp  webserv.hpp
libft/: CMakeLists.txt  Makefile  README.md  ft_atoi.c  ft_atol.c  ft_atoll.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstnew_bonus.c  ft_memchr.c  ft_memmove.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_substr.c  libft.h
srcs/: Base64.cpp  Cgi.cpp  Client.cpp  Connection.cpp  Enums.cpp  Location.cpp  Process.cpp  RequestHandler.cpp  RequestParser.cpp  ResponseHandler.cpp  Server.cpp  Servermanager.cpp  main.cpp  parser.cpp  split.cpp  utils.cpp
test/: CMakeLists.txt  test.cpp  testParseRequest.cpp
